# OpenGLTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
cmake/imgui.cmake/: CMakeLists.txt
cmake/stb.cmake/: CMakeLists.txt
res/Shaders/: 3DModelTrivial.frag  3DModelTrivial.fragment  3DModelTrivial.vert  3DModelTrivial.vertex  BatchRendering.frag  BatchRendering.vert  Cube.fragment  Cube.vertex  Instancing.frag  Instancing.vert  MultiTexture.frag  MultiTexture.vert  Multiple.fragment  Multiple.vertex  Raw.fragment  Raw.vertex  RawTexture.frag  RawTexture.vert  Rectangle.fragment  Rectangle.vertex  Shader.fragment  Shader.vertex  Skybox.frag  Skybox.vert  SkyboxCube.frag  SkyboxCube.fragment  SkyboxCube.vert  SkyboxCube.vertex  TexturedCube.fragment  TexturedCube.vertex
src/: CMakeLists.txt  CameraControls.cpp  CameraControls.h  Debugger.cpp  Debugger.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
src/gtx/: CMakeLists.txt  CameraControls.h  IndexBuffer.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Renderer.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.cpp
src/tests/: BatchRendering.cpp  BatchRendering.h  CMakeLists.txt  ClearColor.cpp  ClearColor.h  ColoredCube.cpp  ColoredCube.h  Instancing.cpp  Instancing.h  MultiTexture.cpp  MultiTexture.h  RawTexture.cpp  RawTexture.h  Skybox.cpp  Skybox.h  Test.h  TestMenu.cpp  TestMenu.h  TextureInstancing.h  TexturedCube.cpp  TexturedCube.h  Trivial3DModel.cpp  Trivial3DModel.h
src/vendors/assimp/: .gitignore
src/vendors/stb_image/: .gitignore
test/: BatchRendering.cpp  BatchRendering.h  ClearColor.cpp  ClearColor.h  ColoredCube.cpp  ColoredCube.h  MultiTexture.cpp  MultiTexture.h  RawTexture.cpp  RawTexture.h  Skybox.cpp  Skybox.h  Test.h  TestMenu.cpp  TexturedCube.cpp  TexturedCube.h  Trivial3DModel.cpp  Trivial3DModel.h
